--- a/sysboard.html
+++ b/sysboard.html
@@ -69,11 +69,83 @@
             <td>Row 3: Value #1</td>
             <td>Row 3: Value #2</td>
             <td>Row 3: Value #3</td>
-            <td>Row 3: Value #4</td>
+            <td><div class="loader loader-small spinner-default"></div></td>
           </tr>
         </tbody>
       </table>
     </section>
+
+    <!-- Others elements -->
+    <section>
+      <header>
+        <h1>Buttons and Alerts!</h1>
+        <p>Try again!</p>
+      </header>
+      <div>
+        <button class="btn-alert">Alert!</button>
+        <button class="btn-warning">Warning!</button>
+        <button class="btn-success">Success!</button>
+      </div>
+    </section>
+
+    <!-- Loaders -->
+    <section>
+      <header>
+        <h1>Loaders</h1>
+        <p>Loaders</p>
+      </header>
+      <div>
+        <div class="loader loader-small spinner-default"></div>
+        <div class="loader loader-medium spinner-default"></div>
+        <div class="loader loader-large spinner-default"></div>
+      </div>
+    </section>
+
+    <!-- Groups of informations -->
+    <section>
+      <header>
+        <h1>Groups of informations</h1>
+        <p>Using groups for organize informations, inputs and others</p>
+      </header>
+
+      <div class="group group-space-input">
+        <div class="group-div">
+          <p>Input #1</p>
+          <input type="text" placeholder="Type here... Aa" />
+        </div>
+        <div class="group-div">
+          <p>Input #2</p>
+          <input type="text" placeholder="Type here... Aa" />
+        </div>
+        <div class="group-div">
+          <p>Input #3</p>
+          <input type="text" placeholder="Type here... Aa" />
+        </div>
+      </div>
+
+      <div class="group group-space">
+        <div class="group-div" style="height: 250px;background-color: red;"></div>
+        <div class="group-div" style="height: 150px;background-color: yellow;"></div>
+        <div class="group-div" style="height: 250px;background-color: green;"></div>
+      </div>
+
+    </section>
+
+    <!-- <div id="notifications">
+      <div class="notify notify-active notify-success">
+        <h1>Ok!</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique expedita quam illum reiciendis hic nobis sed, quos corrupti. Dolorem nam impedit optio sed numquam. Eveniet dicta fugit ipsam explicabo mollitia.</p>
+      </div>
+      <div class="notify notify-active notify-info">
+        <h1>Ok!</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique expedita quam illum reiciendis hic nobis sed, quos corrupti. Dolorem nam impedit optio sed numquam. Eveniet dicta fugit ipsam explicabo mollitia.</p>
+      </div>
+      <div class="notify notify-active notify-error">
+        <h1>Ok!</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique expedita quam illum reiciendis hic nobis sed, quos corrupti. Dolorem nam impedit optio sed numquam. Eveniet dicta fugit ipsam explicabo mollitia.</p>
+      </div>
+    </div> -->
+
   </main>
 </body>
 </html>
