--- a/examples/sysboard.html
+++ b/examples/sysboard.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sysboard</title>
-  <link rel="stylesheet" type="text/css" href="sysboard.css">
+  <link rel="stylesheet" type="text/css" href="../src/sysboard.css">
 </head>
 <body>
   <main>
